fix h2 on mobile

--- a/style.css
+++ b/style.css
@@ -475,7 +475,7 @@ footer {
   }
 
   h2 {
-    font-size: 6.4vw;
+    font-size: 8vw;
   }
 
   p {
